Menambahkan fitur baru untuk menambahkan data logistik
