# routes/logisticRoutes.js
@@ -6,5 +6,6 @@ const isAuthenticated = require("../middleware/authMiddleware");
 
 router.get("/rates", isAuthenticated, logisticController.fetchRates);
 router.get("/data", isAuthenticated, logisticController.getLogisticData);
+router.post("/add", isAuthenticated, logisticController.addLogisticData);
 
 module.exports = router;
